[package]
build = "build.rs"
name = "comics"
version = "0.0.1"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[dependencies]
iron = "*"
hyper = "*"
time = "*"
router = "*"
mount = "*"
unicase = "*"
serde = "*"
serde_json = "*"
rand = "*"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies.staticfile]
version = "*"

[features]
prod = []
